--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,18 +10,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Contact</title>
-    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon" />
 </head>
+
 <body>
 
     <header>
-        <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="cafe.html">Cafe</a>
-                <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+        <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
+                alt="image of malmö cycling club logo"></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="cafe.html">Cafe</a>
+            <a href="event-calender.html">Events</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
 
     <section class="hero-image contact-page">
@@ -29,55 +32,62 @@
         </div>
     </section>
 
-<div class="container">
-    <div class="row">
-        <div class="column">    
-            <h2>We would love to hear from you</h2>
-            <p>Let us know what you're missing
-            Or if there's anything we can do better.
-            Lets make the cycling in Skåne even better, together!
-            Use our social media tags and join our community:</p>
-            <ul class="contact">
-                <li>#malmocyclingclub</li>
-                <li>#roadcycling</li>
-                <li>#gravelridesmalmo</li>
-            </ul>
-            <img src="./assets/images/bikes-in-landscape1.jpg" alt="photo of bikes in open landscape">
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <h2>We would love to hear from you</h2>
+                <p>Let us know what you're missing
+                    Or if there's anything we can do better.
+                    Lets make the cycling in Skåne even better, together!
+                    Use our social media tags and join our community:</p>
+                <ul class="contact">
+                    <li>#malmocyclingclub</li>
+                    <li>#roadcycling</li>
+                    <li>#gravelridesmalmo</li>
+                </ul>
+                <img src="./assets/images/bikes-in-landscape1.jpg" alt="photo of bikes in open landscape">
+            </div>
 
-        <div class="column">
-            <h2>Get the latest on news and events:</h2>
-            <form action="action_page.php">
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your name..">
-            <label for="email">Email Adress</label>
-            <input type="text" id="email" name="email" placeholder="Your email adress..">
-            <label for="type">Type of cycling</label>
-            <select id="type" name="type">
-              <option value="road">Road</option>
-              <option value="gravel">Gravel</option>
-              <option value="both">Both</option>
-            </select>
-        
-            <label for="subject">Leave us a message</label>
-            <textarea id="subject" name="subject" placeholder="Whats on your mind.." style="height:200px"></textarea>
-            <input type="submit" value="Subscribe">
-          </form>
+            <div class="column">
+                <h2>Get the latest on news and events:</h2>
+                <form action="" method="GET">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Your name.." required>
+                    <label for="email">Email Adress</label>
+                    <input type="text" id="email" name="email" placeholder="Your email adress.." required>
+                    <label for="type">Type of cycling</label>
+                    <select id="type" name="type">
+                        <option value="road">Road</option>
+                        <option value="gravel">Gravel</option>
+                        <option value="both">Both</option>
+                    </select>
+
+                    <label for="subject">Leave us a message</label>
+                    <textarea id="subject" name="subject" placeholder="Whats on your mind.." style="height:200px"
+                        required></textarea>
+                    <input type="submit" value="Subscribe">
+                </form>
+            </div>
         </div>
     </div>
-</div>
 
-         
-<footer>
-            <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-            <p id="social-text">Check out our social medias!</p>
-            <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson</h6>
-</footer>
 
-     <!--font awesome script-->    
-     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
+    <footer>
+        <a href="https://facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        <p id="social-text">Check out our social medias!</p>
+        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson
+        </h6>
+    </footer>
+
+    <!--font awesome script-->
+    <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
