--- a/cafe.html
+++ b/cafe.html
@@ -10,66 +10,74 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Cafe</title>
-    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon" />
 </head>
-<body>  
-        <header>
-            <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="cafe.html">Cafe</a>
-                <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </header>
 
-        <section class="hero-image coffee-cafe">
-            <div class="overlay">
-                <h1 class="welcome">Welcome to our coffee club</h1>
-            </div>
-        </section>
+<body>
+    <header>
+        <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
+                alt="image of malmö cycling club logo"></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="cafe.html">Cafe</a>
+            <a href="event-calender.html">Events</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
+    <section class="hero-image coffee-cafe">
+        <div class="overlay">
+            <h1 class="welcome">Welcome to our coffee club</h1>
+        </div>
+    </section>
 
     <div class="container">
         <div class="row">
-        <div class="column">    
-            <p>Most things begins and ends with coffee, so does cycling.
-            Come on in for a nice cup of coffee before or after your ride,
-            we also serve pastries from the bakery down the road.
-            Pop by before or after your ride for a lovely treat!</p>
-            <img src="./assets/images/latte-art3.jpg" alt="man making a latte" class="barista">
-        </div>
-        <div class="column">
+            <div class="column">
+                <p>Most things begins and ends with coffee, so does cycling.
+                    Come on in for a nice cup of coffee before or after your ride,
+                    we also serve pastries from the bakery down the road.
+                    Pop by before or after your ride for a lovely treat!</p>
+                <img src="./assets/images/latte-art3.jpg" alt="man making a latte" class="barista">
+            </div>
+            <div class="column">
                 <h2>We're open for you:</h2>
                 <ul class="cafe">
-                <li>Monday-Friday 09:00-16:00</li>
-                <li>Saturday-Sunday 11:00-15:00</li>
+                    <li>Monday-Friday 09:00-16:00</li>
+                    <li>Saturday-Sunday 11:00-15:00</li>
                 </ul>
                 <h2>Menu:</h2>
                 <ul class="cafe">
-                <li>Espresso €3</li>
-                <li>Macchiato €3.5</li>
-                <li>Cortado €3.5</li>
-                <li>Cappucino €3</li>
-                <li>Cold brew €3</li>
-                <li>Caffe Latte €4</li>
-                <li>Lemonade €2.5</li>
+                    <li>Espresso €3</li>
+                    <li>Macchiato €3.5</li>
+                    <li>Cortado €3.5</li>
+                    <li>Cappucino €3</li>
+                    <li>Cold brew €3</li>
+                    <li>Caffe Latte €4</li>
+                    <li>Lemonade €2.5</li>
                 </ul>
                 <img src="./assets/images/making-espresso1.jpeg" alt="image of espressos being made">
+            </div>
         </div>
     </div>
-</div>
 
 
-<footer>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-                <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-                <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-                <p id="social-text">Check out our social medias!</p>
-                <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson</h6>
-</footer>
+    <footer>
+        <a href="https://facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+        <p id="social-text">Check out our social medias!</p>
+        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson
+        </h6>
+    </footer>
 
-     <!--font awesome script-->    
-     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
+    <!--font awesome script-->
+    <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
