--- a/event-calender.html
+++ b/event-calender.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,19 +10,20 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Calendar</title>
-    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
-        <header>
-            <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="cafe.html">Cafe</a>
-                <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contact</a>
-            </nav>
-        </header>
+    <header>
+        <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
+                alt="image of malmö cycling club logo"></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="cafe.html">Cafe</a>
+            <a href="event-calender.html">Events</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 
     <section class="hero-image event-calender">
         <div class="overlay">
@@ -29,47 +31,54 @@
         </div>
     </section>
 
-<div class="container">
-    <div class="row">
-        <div class="column">    
-            <h2>Ride with us</h2>
-            <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.
-            Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
-            On thursdays we go for the gravels together, one week focus technique and the next distance.
-            On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
-            <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
-        </div>
-        <div class="column">    
-            <h2>Events</h2>
-            <h2>Road</h2>
-            <ul class="events">
-                <li>July 16th, meeting point Hyllie Arena</li>
-                <li>August 22nd, meeting point Malmö Cycling Café</li>
-                <li>September 10th meeting point Malmö Cycling Café</li>
-            </ul>
-            <h2>Gravel</h2>
-            <ul class="events">
-                <li>July 2nd, meeting point Regnbågsbanan, Malmö</li>
-                <li>August 13th, meeting point Regnbågsbanan, Malmö</li>
-                <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
-                <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
-        </ul>
-            <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <h2>Ride with us</h2>
+                <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling
+                    together.
+                    Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
+                    On thursdays we go for the gravels together, one week focus technique and the next distance.
+                    On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
+                <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
+            </div>
+            <div class="column">
+                <h2>Events</h2>
+                <h2>Road</h2>
+                <ul class="events">
+                    <li>July 16th, meeting point Hyllie Arena</li>
+                    <li>August 22nd, meeting point Malmö Cycling Café</li>
+                    <li>September 10th meeting point Malmö Cycling Café</li>
+                </ul>
+                <h2>Gravel</h2>
+                <ul class="events">
+                    <li>July 2nd, meeting point Regnbågsbanan, Malmö</li>
+                    <li>August 13th, meeting point Regnbågsbanan, Malmö</li>
+                    <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
+                    <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
+                </ul>
+                <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
+            </div>
         </div>
     </div>
-</div>
-    
-<footer>
-        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+
+    <footer>
+        <a href="https://facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         <p id="social-text">Check out our social medias!</p>
-        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson</h6>
-</footer>
+        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson
+        </h6>
+    </footer>
 
 
-     <!--font awesome script-->    
-     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
+    <!--font awesome script-->
+    <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
