--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,22 +10,22 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Malmö Cycling Club</title>
-    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
-    
+
     <header>
-            <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="logo pf malmö cycling club"></a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="cafe.html">Cafe</a>
-                <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contact</a>
-            </nav>
+        <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="logo pf malmö cycling club"></a>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="cafe.html">Cafe</a>
+            <a href="event-calender.html">Events</a>
+            <a href="contact.html">Contact</a>
+        </nav>
 
     </header>
-    
+
 
     <section class="hero-image cyclists-home">
         <div class="overlay">
@@ -32,30 +33,39 @@
         </div>
     </section>
 
-    <div class="container"> 
+    <div class="container">
         <div class="row">
-        <div class="column">  
-            <h2>Cycling</h2>  
-            <p>Cycling is the best we know! Cycling creates meetings - and friends for life. It gives you energyand happiness. Cycling saves a bad day and makes a good day even better. Ride as much or as little, as long or as short as you feel, but ride!</p>
-            <img src="./assets/images/roadcycling1.jpeg" alt="roads for cycling roadbikes">
-        </div>
-        <div class="column">
+            <div class="column">
+                <h2>Cycling</h2>
+                <p>Cycling is the best we know! Cycling creates meetings - and friends for life. It gives you energyand
+                    happiness. Cycling saves a bad day and makes a good day even better. Ride as much or as little, as
+                    long or as short as you feel, but ride!</p>
+                <img src="./assets/images/roadcycling1.jpeg" alt="roads for cycling roadbikes">
+            </div>
+            <div class="column">
                 <h2>This is us</h2>
-                <p>We are bike enthusiasts for both roadcycling and gravel. We want this to be the local spot for all cyclists. We would love to help you discover new roads around our beautiful county. We take pride in our cycling, and we want you to feel the same way!</p>
+                <p>We are bike enthusiasts for both roadcycling and gravel. We want this to be the local spot for all
+                    cyclists. We would love to help you discover new roads around our beautiful county. We take pride in
+                    our cycling, and we want you to feel the same way!</p>
                 <img src="./assets/images/roadies1.jpeg" alt="roadcyclists from behind">
-        </div>
+            </div>
         </div>
     </div>
-<footer>
-        <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
-        <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+    <footer>
+        <a href="https://facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com" target="_blank" rel="noopener"
+            aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://youtube.com" target="_blank" rel="noopener"
+            aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://instagram.com" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
         <p class="social-text">Check out our social medias!</p>
         <h6>Copyright &copy; 2022 Designed by Jessica Fransson</h6>
-</footer>
+    </footer>
 
-    <!--font awesome script-->    
+    <!--font awesome script-->
     <script src="https://kit.fontawesome.com/af04db9847.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
