added comments to section to describe the sections

--- a/cafe.html
+++ b/cafe.html
@@ -13,6 +13,7 @@
     <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon" />
 </head>
 
+<!--header info and menu-->
 <body>
     <header>
         <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
@@ -24,13 +25,14 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-
+    <!--hero image-->
     <section class="hero-image coffee-cafe">
         <div class="overlay">
             <h1 class="welcome">Welcome to our coffee club</h1>
         </div>
     </section>
 
+    <!--general café information-->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -40,6 +42,8 @@
                     Pop by before or after your ride for a lovely treat!</p>
                 <img src="./assets/images/latte-art3.jpg" alt="man making a latte" class="barista">
             </div>
+
+            <!--opening hours and menu-->
             <div class="column">
                 <h2>We're open for you:</h2>
                 <ul class="cafe">
@@ -61,7 +65,7 @@
         </div>
     </div>
 
-
+    <!--footer section-->
     <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
