--- a/event-calender.html
+++ b/event-calender.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!--top menu and logo section-->
     <header>
         <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
                 alt="image of malmö cycling club logo"></a>
@@ -24,24 +25,25 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-
+    <!--hero image section-->
     <section class="hero-image event-calender">
         <div class="overlay">
             <h1 class="welcome">Join our events</h1>
         </div>
     </section>
-
+    <!--information about different rides to do-->
     <div class="container">
         <div class="row">
             <div class="column">
                 <h2>Ride with us</h2>
                 <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling
                     together.
-                    Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
-                    On thursdays we go for the gravels together, one week focus technique and the next distance.
-                    On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
+                    Join us on tuesdays for a Road ride, the distance varies - but its always a social event.
+                    On thursdays we go for the gravels together, one week with focus on technique and the next distance.
+                    On saturdays we do a long ride on our road bikes, always with a coffee stop about half way.</p>
                 <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
             </div>
+            <!--Information about the different events-->
             <div class="column">
                 <h2>Events</h2>
                 <h2>Road</h2>
@@ -61,7 +63,7 @@
             </div>
         </div>
     </div>
-
+    <!--footer section-->
     <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
