--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!--Top menu and logo section-->
     <header>
         <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="logo pf malmö cycling club"></a>
         <nav>
@@ -26,13 +26,13 @@
 
     </header>
 
-
+    <!--hero image section-->
     <section class="hero-image cyclists-home">
         <div class="overlay">
             <h1 class="welcome">Welcome to our cycling club</h1>
         </div>
     </section>
-
+    <!--section with information-->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -51,6 +51,8 @@
             </div>
         </div>
     </div>
+
+    <!--footer section-->
     <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
