--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-
+    <!--top menu and logo section-->
     <header>
         <a href="index.html"><img class="logo" src="./assets/images/logo.svg"
                 alt="image of malmö cycling club logo"></a>
@@ -25,13 +25,14 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-
+    <!--hero image section-->
     <section class="hero-image contact-page">
         <div class="overlay">
             <h1 class="welcome">Keep in touch with us!</h1>
         </div>
     </section>
 
+    <!--general club information-->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -48,6 +49,7 @@
                 <img src="./assets/images/bikes-in-landscape1.jpg" alt="photo of bikes in open landscape">
             </div>
 
+            <!--contact information form-->
             <div class="column">
                 <h2>Get the latest on news and events:</h2>
                 <form action="" method="GET">
@@ -71,7 +73,7 @@
         </div>
     </div>
 
-
+    <!--footer section-->
     <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
