added to readme

--- a/cafe.html
+++ b/cafe.html
@@ -26,6 +26,7 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+
     <!--hero image-->
     <section class="hero-image coffee-cafe">
         <div class="overlay">
@@ -37,7 +38,7 @@
     <div class="container">
         <div class="row">
             <div class="column">
-                <p>Most things begins and ends with coffee, so does cycling.
+                <p>Most things begins and ends with coffee, we believe so does cycling.
                     Come on in for a nice cup of coffee before or after your ride,
                     we also serve pastries from the bakery down the road.
                     Pop by before or after your ride for a lovely treat!</p>
