--- a/event-calender.html
+++ b/event-calender.html
@@ -25,12 +25,14 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+
     <!--hero image section-->
     <section class="hero-image event-calender">
         <div class="overlay">
             <h1 class="welcome">Join our events</h1>
         </div>
     </section>
+
     <!--information about different rides to do-->
     <div class="container">
         <div class="row">
@@ -39,10 +41,11 @@
                 <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling
                     together.
                     Join us on tuesdays for a Road ride, the distance varies - but its always a social event.
-                    On thursdays we go for the gravels together, one week with focus on technique and the next distance.
+                    On thursdays we go for the gravels together, one week with focus on technique and the next week distance.
                     On saturdays we do a long ride on our road bikes, always with a coffee stop about half way.</p>
                 <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
             </div>
+
             <!--Information about the different events-->
             <div class="column">
                 <h2>Events</h2>
@@ -63,6 +66,7 @@
             </div>
         </div>
     </div>
+
     <!--footer section-->
     <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener"
