--- a/event-calender.html
+++ b/event-calender.html
@@ -44,6 +44,8 @@
                     On thursdays we go for the gravels together, one week with focus on technique and the next week
                     distance.
                     On saturdays we do a long ride on our road bikes, always with a coffee stop about half way.</p>
+                    <h2>Listen to us on the cycling podcast</h2>
+                    <iframe src="https://open.spotify.com/embed-podcast/show/2tvYRMktvIYH7CLg0vHTr4" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
             </div>
 
@@ -64,7 +66,6 @@
                     <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
                 </ul>
                 <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
-                <iframe src="https://open.spotify.com/embed-podcast/show/2tvYRMktvIYH7CLg0vHTr4" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
         </div>
     </div>
