--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>We are bike enthusiasts for both roadcycling and gravel. We want this to be the local spot for all
                     cyclists. We would love to help you discover new roads around our beautiful county. We take pride in
                     our cycling, and we want you to feel the same way!</p>
-                <img src="./assets/images/roadies1.jpeg" alt="roadcyclists from behind">
+                <img src="./assets/images/roadies2.jpg" alt="roadcyclists from behind">
                 </div>
         </div>
     </div>
