edited photo size

--- a/event-calender.html
+++ b/event-calender.html
@@ -65,7 +65,7 @@
                     <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
                     <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
                 </ul>
-                <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" height="600px" width="400px" class="race">
+                <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
             </div>
         </div>
     </div>
