--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <p>Cycling is the best we know! Cycling creates meetings - and friends for life. It gives you energy and
                     happiness. Cycling saves a bad day and makes a good day even better. Ride as much or as little, as
                     long or as short as you feel, but ride!</p>
-                <img src="./assets/images/roadcycling1.jpeg" alt="roads for cycling roadbikes">
+                <img src="./assets/images/roadcycling2.jpg" alt="roads for cycling roadbikes">
             </div>
             <div class="column">
                 <h2>This is us</h2>
