changed the photo size

--- a/cafe.html
+++ b/cafe.html
@@ -42,7 +42,7 @@
                     Come on in for a nice cup of coffee before or after your ride,
                     we also serve pastries from the bakery down the road.
                     Pop by before or after your ride for a lovely treat!</p>
-                <img src="./assets/images/latte-art3.jpg" alt="man making a latte" class="barista">
+                <img src="./assets/images/latte-art1.jpg" alt="man making a latte" class="barista">
             </div>
 
             <!--opening hours and menu-->
@@ -62,7 +62,7 @@
                     <li>Caffe Latte €4</li>
                     <li>Lemonade €2.5</li>
                 </ul>
-                <img src="./assets/images/making-espresso1.jpeg" alt="image of espressos being made">
+                <img src="./assets/images/making-espresso2.jpg" alt="image of espressos being made">
             </div>
         </div>
     </div>
