--- a/event-calender.html
+++ b/event-calender.html
@@ -46,7 +46,7 @@
                     On saturdays we do a long ride on our road bikes, always with a coffee stop about half way.</p>
                     <h2>Listen to us on the cycling podcast</h2>
                     <iframe src="https://open.spotify.com/embed-podcast/show/2tvYRMktvIYH7CLg0vHTr4" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                    <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
+                    <img src="./assets/images/female-cyclists2.jpg" alt="image of female cylists">
             </div>
 
             <!--Information about the different events-->
@@ -65,7 +65,7 @@
                     <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
                     <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
                 </ul>
-                <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
+                <img src="./assets/images/event-race1.jpg" alt="group of cyclists racing" class="race">
             </div>
         </div>
     </div>
